--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "deep-equal",
+  "name": "deep-equal-nonrecursive",
   "version": "1.0.1",
   "description": "node's assert.deepEqual algorithm",
   "main": "index.js",
@@ -17,7 +17,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "http://github.com/substack/node-deep-equal.git"
+    "url": "https://github.com/nunomluz/node-deep-equal.git"
   },
   "keywords": [
     "equality",
